# axum-demo

./: Cargo.toml  app.toml
api/: Cargo.toml
api/src/: lib.rs  main.rs
api/src/controller/: book_controller.rs  mod.rs  user_controller.rs
api/src/model/: mod.rs  user_model.rs
api/src/route/: route.rs
config/: Cargo.toml
config/src/: config.rs
db/: Cargo.toml
db/src/: mysql.rs
