[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.1"
db = { path = "../db" }
config = { path = "../config" }
tracing-subscriber = "0.3.17"
env_logger = "0.10.1"
tokio = { version = "1.35.0", features = ["full"] }
sqlx = { version = "0.7.3", features = ["mysql", "runtime-tokio"] }
